# claude-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
src/claude_bridge/: __init__.py  app.py  cli.py  config.py
src/claude_bridge/anthropic/: __init__.py  adapter.py  router.py  schemas.py  streaming.py
src/claude_bridge/core/: __init__.py  claude_client.py  cli_wrapper.py  model_mapper.py
tests/: __init__.py  conftest.py
tests/fixtures/: anthropic_requests.json  cli_responses.json
tests/integration/: test_claude_client.py  test_cli_wrapper.py  test_router.py
tests/unit/: test_adapter.py  test_config.py  test_model_mapper.py  test_schemas.py  test_streaming.py
